feat: 베팅 금액 입력 기능 추가